--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>The Secret to the Golf Swing - It Feels Nothing Like You'd Expect</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>the toughest watch of my youtube career..</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Can you just flip a coin and make money trading?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The only thing you can truly know for sure</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1113,7 +1113,7 @@
                     <div class="video-info">
                         <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Can you just flip a coin and make money trading?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>The only thing you can truly know for sure</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8162,7 +8162,7 @@
                         <div class="video-info">
                             <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10061,7 +10061,7 @@
                         <div class="video-info">
                             <h3>The Secret to the Golf Swing - It Feels Nothing Like You'd Expect</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>the toughest watch of my youtube career..</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
