--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
                     <div class="video-info">
                         <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1876,7 +1876,7 @@
                     <div class="video-info">
                         <h3>Securing your trading profit!!!</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2701,7 +2701,7 @@
                     <div class="video-info">
                         <h3>90% Winning Rate Is Useless. Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 27, 2025</div>
                     </div>
                 </a>
             </div>
@@ -6253,7 +6253,7 @@
                         <div class="video-info">
                             <h3>Securing your trading profit!!!</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6704,7 +6704,7 @@
                         <div class="video-info">
                             <h3>90% Winning Rate Is Useless. Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 27, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -8162,7 +8162,7 @@
                         <div class="video-info">
                             <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
